objects/EUR_CRM_PRS_Group_Outlet_Type__c.object
<CustomObject>
    <description>This is created for the new approach for PROS and PROFS -  “PRS” (Pernod-Ricard Segmentation).

PR BG is the first country to use it.</description>
    <fields>
        <fullName>EUR_CRM_BrandBuildPotQuestionSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Building Potential Question Set</label>
        <referenceTo>EUR_CRM_PRS_Question_Set__c</referenceTo>
        <relationshipLabel>PRS Group Outlet Types (EU) (Questions for Brand Building Potential)</relationshipLabel>
        <relationshipName>PRS_Group_Outlet_Types_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BusinessPotentialQuestionSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Potential Question Set</label>
        <referenceTo>EUR_CRM_PRS_Question_Set__c</referenceTo>
        <relationshipLabel>PRS Group Outlet Types (EU)</relationshipLabel>
        <relationshipName>PRS_Group_Outlet_Types_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>RIGHT(LEFT(RecordType.DeveloperName,6),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type_Name__c</fullName>
        <label>Group Outlet Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Night Club</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Hyper/Supermarket</fullName>
                </value>
                <value>
                    <fullName>Convenience</fullName>
                </value>
                <value>
                    <fullName>Cash &amp; Carry</fullName>
                </value>
                <value>
                    <fullName>Discounters</fullName>
                </value>
                <value>
                    <fullName>Traditional Off Trade</fullName>
                </value>
                <value>
                    <fullName>Liquor Specialists</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Question_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level Question Set</label>
        <referenceTo>EUR_CRM_PRS_Question_Set__c</referenceTo>
        <relationshipLabel>PRS Group Outlet Types (EU) (Image Level Question Set)</relationshipLabel>
        <relationshipName>PRS_Group_Outlet_Types_EU3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Group_Outlet_Name__c</fullName>
        <label>PRS Group Outlet Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Night Club</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Hyper/Supermarket</fullName>
                </value>
                <value>
                    <fullName>Convenience</fullName>
                </value>
                <value>
                    <fullName>Cash &amp; Carry</fullName>
                </value>
                <value>
                    <fullName>Discounters</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Liquor Specialists</fullName>
                </value>
                <value>
                    <fullName>Traditional Off Trade</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                    <isActive>false</isActive>
                    <label>Nightclub</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Question_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential Question Set</label>
        <referenceTo>EUR_CRM_PRS_Question_Set__c</referenceTo>
        <relationshipLabel>PRS Group Outlet Types (EU) (Volume Potential Question Set)</relationshipLabel>
        <relationshipName>PRS_Group_Outlet_Types_EU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PRS Group Outlet Type (EU)</label>
    <listViews>
        <fullName>EUR_BE_PRS_OffTradeGroupOutletType_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Image_Level_Question_Set__c</columns>
        <columns>EUR_CRM_Volume_Potential_Question_Set__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Group_Outlet_Type__c.EUR_BE_PRS_Off_Trade_Group_Outlet_Type</value>
        </filters>
        <label>EUR BE PRS OffTradeGroupOutletType View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_PRS_OnTradeGroupOutletType_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Image_Level_Question_Set__c</columns>
        <columns>EUR_CRM_Volume_Potential_Question_Set__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Group_Outlet_Type__c.EUR_BE_PRS_On_Trade_Group_Outlet_Type</value>
        </filters>
        <label>EUR BE PRS OnTradeGroupOutletType View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_Group_Outlet_Types_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_BrandBuildPotQuestionSet__c</columns>
        <columns>EUR_CRM_BusinessPotentialQuestionSet__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Group_Outlet_Type__c.EUR_BG_PRS_Off_Trade_Group_Outlet_Type</value>
        </filters>
        <label>EUR BG All PRS Group Outlet Types View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-GO-{00000}</displayFormat>
        <label>PRS Group Outlet Type No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Group Outlet Types (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_PRS_Off_Trade_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR BE PRS Off Trade Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_On_Trade_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR BE PRS On Trade Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Off_Trade_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR BG PRS Off Trade Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRS_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>PRS Group Outlet Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>